methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:5: error: expected class or object definition
def faireV(){
^PictureMono3:24: error: expected class or object definition
def faireCarre(){
^PictureMono3:33: error: expected class or object definition
def faireLigne(){
^PictureMono3:39: error: expected class or object definition
def monter(){
^PictureMono3:47: error: expected start of definition
override def run() {
         ^PictureMono3:54: error: Unmatched closing brace '}' ignored here
}
^